# Observer

./: .gitignore  README.md
.github/workflows/: release.yml  sign-windows.yml
.signpath/: artifact-configuration.xml
.signpath/policies/observer/: release-signing.yml  test-signing.yml
app/: package.json  pnpm-lock.yaml  update_version.sh
app/desktop/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
app/desktop/capabilities/: default.json
app/desktop/src/: lib.rs  shortcuts.rs
app/mobile/: Cargo.toml  tauri.conf.json
app/mobile/src/: lib.rs  llm_engine.rs  server.rs
app/plugins/llm_engine/: Cargo.toml
app/plugins/llm_engine/src/: lib.rs
app/plugins/screen-capture/: Cargo.toml  build.rs
app/plugins/screen-capture/permissions/: default.toml
app/plugins/screen-capture/permissions/autogenerated/: reference.md
app/plugins/screen-capture/permissions/autogenerated/commands/: get_broadcast_status.toml  get_capture_targets_cmd.toml  start_capture_stream_cmd.toml
app/plugins/screen-capture/permissions/schemas/: schema.json
app/plugins/screen-capture/src/: desktop.rs  lib.rs  mobile.rs  targets.rs
app/src/: index.css  main.tsx
app/src/components/: AcceptToS.tsx  AgentChip.tsx  AppHeader.tsx  AvailableModels.tsx  BenchmarkPanel.tsx  CreditVisualization.tsx  GenerateAgent.tsx  GetStarted.tsx  InferenceParamsEditor.tsx  InteractiveTutorial.tsx  LlmDebugPanel.tsx  LocalServerSetupDialog.tsx  ModelHub.tsx  ObServerTab.tsx  PricingTable.tsx  SettingsTab.tsx  StartupDialogs.tsx  (+4 more)
cli/: Cargo.toml
cli/src/: config.rs  main.rs  preflight.rs
(+70 files in other folders)
