[package]
name = "tauri-plugin-llm-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_plugin_llm_engine"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.21"
llama-cpp-2 = { version = "0.1.144", features = ["mtmd"] }

[target.'cfg(target_os = "ios")'.dependencies]
llama-cpp-2 = { version = "0.1.144", features = ["metal"] }

